--- a/weapp/mall/templates/mall/editor/product_review_list.html
+++ b/weapp/mall/templates/mall/editor/product_review_list.html
@@ -72,10 +72,7 @@
                 {{/if}}
                 {{if review.status.value === '1'}}
                     <a href="/mall2/product_review/?id=${review.id}">修改</a>&nbsp;&nbsp;
-                    {{if data.able_stick}}
-                    {{else}}
-                        <span class='gray'>置顶</span>
-                    {{/if}}
+                    <a href="javascript:void(0);" class="xa-modify" data-product-review-id="${review.id}" data-status="2">置顶</a>
                 {{/if}}
                 {{if review.status.value === '2'}}
                     <a href="/mall2/product_review/?id=${review.id}">修改</a><br>
