解决会员列表代码冲突

--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -296,6 +296,7 @@
 }
 .xui-memberListPage .xui-dropbox {
 	border-radius: 5px !important;
+	min-height: 0px !important;
 }
 .xui-memberListPage .xui-operationWrap {
 	margin-top: -10px;
