--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -342,7 +342,7 @@
 						<a href="javascript:void(0);" class="xa-update-tag" data-id="${member.id}">调分组</a>
 					</div>
 					<div class="xui-right">
-						<a href="javascript:void(0);" class="xa-update-grade" data-id="${member.id}">调等级</a>
+						<a href="javascript:void(0);" class="xa-update-grade" data-id="${member.id}">设等级</a>
 					</div>
 					<div class="cb"></div>
 				</div>
@@ -351,7 +351,7 @@
 						<a href="javascript:void(0);" class="xa-issuing-coupon" data-member-name="${ member.username }">发优惠券</a>
 					</div>
 					<div class="xui-right">
-						<a href="javascript:void(0);" class="xa-update-integral" data-id="${member.id}">调积分</a></br>
+						<a href="javascript:void(0);" class="xa-update-integral" data-id="${member.id}">加积分</a></br>
 					</div>
 					<div class="cb"></div>
 				</div>
