--- a/weapp/mall/templates/mall/editor/product_categories.html
+++ b/weapp/mall/templates/mall/editor/product_categories.html
@@ -18,7 +18,7 @@
 <table class="table  mt20  table-bordered" data-category-id="{{category.id}}">
 	<thead>
 		<tr class="xui-tableTitleBar ">
-			<th colspan="6" class="xui-i-title">
+			<th colspan="7" class="xui-i-title">
 				<span class="xa-categoryTitle xui-fontBold xui-categoryTitlePosition">{{category.name}}</span>
 				<div class="xui-i-actionBar">
 					<a href="javascript:void(0);" class="btn btn-primary xa-editCategory xui-editCategory">管理</a>
@@ -28,29 +28,30 @@
 			</th>
 		</tr>
 		<tr>
-			<th>商品名称</th>
-			<th>商品价格（元）</th>
-			<th>状态</th>
-			<th>销量</th>
-			<th>加入分组时间</th>
-			<th>排序</th>
+			<th width="415">商品名称</th>
+			<th width="110">商品价格（元）</th>
+			<th width="80">状态</th>
+			<th width="75">排序</th>
+			<th width="75">销量</th>
+			<th width="110">加入分组时间</th>
+			
 			<th>操作</th>
 		</tr>{{product.user_code}}
 	</thead>
 	<tbody>
 		{% for product in category.products %}
-		<tr data-product-id="{{product.id}}" data-category-id="{{category.id}}">
-			<td>{{product.name}}</td>
-			<td>{{product.display_price}}</td>
-			<td>{{product.status}}</td>
-			<td>{{product.sales}}</td>
-			<td>{{product.join_category_time|date:"Y-m-j H:i"}}</td>
-			<td>
+		<tr data-product-id="{{product.id}}" data-category-id="{{category.id}}" {% if product.status == '待售' %}class="xui-color-mark"{% endif %}>
+			<td width="415">{{product.name}}</td>
+			<td width="110">{{product.display_price}}</td>
+			<td width="80">{{product.status}}</td>
+			<td width="75">
 				{% if product.status == '在售' %}
 					<input width="38" type="text" class="xa-rank" data-id="{{product.id}}" style="width:100%;"
 					 			 value="{{product.display_index}}" data-display-index="{{product.display_index}}">
 				{% endif %}
 			</td>
+			<td width="75">{{product.sales}}</td>
+			<td width="110">{{product.join_category_time|date:"Y-m-j H:i"}}</td>
 			<td><a class="xa-deleteProductFromCategory" href="javascript:void(0);">删除</a></td>
 		</tr>
 		{% endfor %}
