--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -23,7 +23,7 @@
 	<div class="xa-productFilterView xui-filterPanel"></div>
 	{% if counts %}
 	<div class="panel panel-default mt20 xb-rightPanel pr">
-		<div class="panel-heading dropdown xui-operation" style="height:40px">
+		<div class="panel-heading dropdown xui-operation update_dropdown" style="height:40px">
 			<div class="xui-operationWrap">
 				<span class="checkbox" style="display:inline-block;margin:0 15px 0 15px;">
 					<label  for="all">
