--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
@@ -26,7 +26,11 @@
         {% if setting.bing_member_title %}
             <span class="xui-tag">{{setting.bing_member_title}}</span>
         {% endif %}
-        <p class="xui-hasRec"><a {% if setting.count > 0 %} href='./?module=market_tool:channel_qrcode&model=settings_detail&action=get&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&workspace_id=market_tool:channel_qrcode&sid={{setting.id}}&fmt={{member.token}}'{% else %} href="javascript:void(0);" {% endif %}>已推荐{{setting.count}}人扫码</a></p>
+        {% if setting.count > 0 %} 
+        <p class="xui-hasRec"><a href='./?module=market_tool:channel_qrcode&model=settings_detail&action=get&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&workspace_id=market_tool:channel_qrcode&sid={{setting.id}}&fmt={{member.token}}'>已推荐{{setting.count}}人扫码</a></p>
+        {% else %}
+        <p class="xui-hasRec">已推荐{{setting.count}}人扫码</p>
+        {% endif %}
     </section>
     {% endif %}
 	<section>
