--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -156,6 +156,9 @@
 	border-color: #ED9611;
 	color:#ED9611;
 }
+.xui-memberListPage .xui-Blue{
+	color:#1262b7;
+}
 .xui-memberListPage .xui-fromCode{
 	border-color: #22866E;
 	color:#22866E;
