--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -292,13 +292,13 @@
 						已取消
 						</div>
 					{{/if}}
-					<a href="/member/member_detail/edit/?id=${ member.id }">
+					<a target="_blank" href="/member/member_detail/edit/?id=${ member.id }">
 						<img src="{{if member.user_icon}}${ member.user_icon }{{else}}/static/img/user-1.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"/>
 					</a>
 				</div>
 				<div class="column_block">
 					<div>
-					<a href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;" >{{html member.username_truncated}}</a>
+					<a target="_blank" href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;" >{{html member.username_truncated}}</a>
 				</div>
 			</td>
 			<td>
@@ -356,7 +356,7 @@
 					<div class="cb"></div>
 				</div>
 			<div>
-				<a href="/new_weixin/realtime_messages_detail/?session_id=${ member.session_id }"  {{if member.session_id == -1}}title="暂无对话" onclick="return false"{{/if}}>查看聊天记录</a>
+				<a target="_blank" href="/new_weixin/realtime_messages_detail/?session_id=${ member.session_id }"  {{if member.session_id == -1}}title="暂无对话" onclick="return false"{{/if}}>查看聊天记录</a>
 			</td>
 		</tr>
 		{{/each}}
@@ -721,7 +721,7 @@ $(document).ready(function() {
 	var status = '{{status}}';
 	if(status === '1') {
 		_.delay(function(){
-			$('.xa-more-filter').trigger('click');
+			//$('.xa-more-filter').trigger('click');
 			$("#status").val("1");
 		}, 500);
 
