--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -138,8 +138,8 @@
 			data-args='{"status":"{{status}}"}'
 			data-disable-header-select="true"
 		></div>
-		<div class="dropdown xui-operation update_dropdown">
-			<div class="pr">
+		<div class="dropdown xui-operation update_dropdown pa"  style="bottom:0px;">
+			<div >
 				<span class="checkbox" style="display:inline-block;margin:0 15px 0 13px;">
 					<label class="xa-selectAll" for="all">
 							<input type="checkbox" style="top:14px" id="all">
@@ -299,7 +299,7 @@
 				</div>
 				<div class="column_block">
 					<div>
-					<a href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;" >{{html member.username_truncated}}</a>
+					<a class="xui-Blue" href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;" >{{html member.username_truncated}}</a>
 				</div>
 			</td>
 			<td>
