--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -157,7 +157,7 @@
 	color:#ED9611;
 }
 .xui-memberListPage .xui-Blue{
-	color:#1262b7;
+	color:#1262b7!important;
 }
 .xui-memberListPage .xui-fromCode{
 	border-color: #22866E;
