解决分组单词太长BUG

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -333,7 +333,7 @@
 				{{if member.source == 2}}<div class="xui-fromShare">会员分享</div>{{/if}}
 			</td>
 			<td>
-				<div class="centerAlign">
+				<div class="centerAlign auto_wrap_no_flow" >
 					{{each(i,tag) tags}}
 			          ${tag.name}
 			         {{/each}}
