--- a/weapp/static_v2/js/view/member_update_tag/template.html
+++ b/weapp/static_v2/js/view/member_update_tag/template.html
@@ -16,7 +16,7 @@
 		<ul>
 			{{each(i,tag) tags}}
 			<li class="fl ml15 mt5 checkbox">
-			<label>
+			<label class="auto_wrap_no_flow">
 				<input type="checkbox" name="tag_id" value="${tag.id}" data-value="${tag.name}"> ${tag.name}
 			</label>
 			</li>
