--- a/weapp/static_v2/js/view/member_member_filter_view/template.html
+++ b/weapp/static_v2/js/view/member_member_filter_view/template.html
@@ -181,7 +181,7 @@
 <div class="tr">
 
 
-	<button class="btn btn-link xa-more-filter">>>切换到高级查询</button>
+	<button class="btn btn-link xa-more-filter">>>展开</button>
 </div>
 <div class="tc">
 
