好友列表弹窗 没有数据样式

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -373,6 +373,9 @@ textarea{resize:none}
 .xui-colorRed{
 	color: red;
 }
+.xui-colorBlue{
+	color:#1262b7!important;
+}
 .cRed{
 	color: #CF0404;
 }
