--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -156,6 +156,9 @@
 	border-color: #ED9611;
 	color:#ED9611;
 }
+.xui-firendlistdialog .modal-footer {
+	height: 0px;
+}
 .xui-memberListPage .xui-Blue{
 	color:#1262b7!important;
 }
