--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -269,9 +269,10 @@
 			<th >会员等级</th>
 			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='friend_count' >好友数</th>
 			<th  class="tx_sortable xui-Blue" style="width:8%" data-sort-attr='integral' >积分</th>
-			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='unit_price' >平均客单价</th>
-			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_times' >购买次数</th>
 			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_money' >消费总额</th>
+			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='unit_price' >客单价</th>
+			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_times' >购买次数</th>
+			
 			<th  class="tx_sortable xui-Blue" style="width:12%" data-sort-attr='created_at' data-init-sort="-created_at" >加入时间&来源</th>
 			<th  style="width:8%">分组</th>
 			
@@ -316,15 +317,16 @@
 				<div class="centerAlign">${ member.integral }</div>
 			</td>
 			<td>
+				<div class="centerAlign">${ member.pay_money }</div>
+			</td>
+			<td>
 				<div class="centerAlign">${ member.unit_price }</div>
 			</td>
 			<td>
 				<div class="centerAlign">${ member.pay_times }</div>
 			</td>
 			
-			<td>
-				<div class="centerAlign">${ member.pay_money }</div>
-			</td>
+			
 			<td>
 				<div class="centerAlign">${ member.created_at }</div>
 				{{if member.source == 0}}<div class="">直接关注</div>{{/if}}
