--- a/weapp/static_v2/js/view/member_member_filter_view/template.html
+++ b/weapp/static_v2/js/view/member_member_filter_view/template.html
@@ -113,9 +113,8 @@
 	<div class="xui-col disTc">
 		
 		<div class="xui-i-item">
-			<label>周后购买时间
+			<label>最后购买时间
 			：</label>
-
 			<input
 				type="text"
 				class="form-control xui-datePicker"
