修改全选问题

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -27,7 +27,7 @@
 			<div class="xui-operationWrap">
 				<span class="checkbox" style="display:inline-block;margin:0 15px 0 15px;">
 					<label  for="all">
-						<input type="checkbox" id="xa-selectAll" class="xa-select" style="top:14px" id="all">
+						<input type="checkbox" id="xa-selectAll" style="top:14px" id="all">
 						全选
 					</label>
 				</span>
