字段名称修改

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -273,7 +273,7 @@
 			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='unit_price' >客单价</th>
 			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_times' >购买次数</th>
 			
-			<th  class="tx_sortable xui-Blue" style="width:12%" data-sort-attr='created_at' data-init-sort="-created_at" >加入时间&来源</th>
+			<th  class="tx_sortable xui-Blue" style="width:12%" data-sort-attr='created_at' data-init-sort="-created_at" >关注时间&来源</th>
 			<th  style="width:8%">分组</th>
 
 			<th class="" style="width:10%">
